--- a/action.yml
+++ b/action.yml
@@ -52,7 +52,7 @@ runs:
       run: |
         appstore_url="${{ inputs.appstore_url }}"
         echo "appstore-id=$(echo ${appstore_url##*/} | cut -c 3-)" >> "$GITHUB_OUTPUT"
-        echo "bundle-id=$(curl -s "${{ inputs.appstore_url }}" | xmllint --html --xpath "string(//script[@id=\"shoebox-media-api-cache-apps\"])" - 2> /dev/null | jq -r ".[] | fromjson | .d[0].attributes.platformAttributes.ios.bundleId")" >> "$GITHUB_OUTPUT"
+        echo "bundle-id=$(curl -s "${{ inputs.appstore_url }}" | xmllint --html --xpath "string(//script[@id=\"shoebox-media-api-cache-apps\"])" - 2> /dev/null | jq -n -r "inputs | .[]" | head -n 1 | jq -r ".d[0].attributes.platformAttributes.ios.bundleId")" >> "$GITHUB_OUTPUT"
 
     - name: Get download token
       id: get-token
